tests/ui/inches_times_inches.stderr
error[E0277]: cannot multiply `Inches` by `Inches`
 --> tests/ui/inches_times_inches.rs:9:28
  |
9 |     let _ = inches.clone() * inches;
  |                            ^ no implementation for `Inches * Inches`
  |
  = help: the trait `Mul` is not implemented for `Inches`
  = help: the following other types implement trait `Mul<Rhs>`:
            `Inches` implements `Mul<RadiansPerSecond>`
            `Inches` implements `Mul<Scale>`
